<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:background="#FF0000"
        android:text="@string/home_subtitle"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="italic" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="203dp"
            android:layout_height="225dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/detetive"
            android:contentDescription="@string/image_pikachu"
            android:textAlignment="center" />

        <GridLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:paddingLeft="7sp"
            android:paddingRight="10sp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/detetiveNome"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:text="@string/detetiveTelefone"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:text="@string/detetiveEdereco"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:text="@string/detetiveEmail"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:text="@string/detetiveTexto"
                android:textSize="12sp" />
        </GridLayout>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="225dp">

        <ImageView
            android:layout_width="203dp"
            android:layout_height="225dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/sapo"
            android:contentDescription="@string/image_pikachu"
            android:textAlignment="center" />

        <GridLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:paddingLeft="7sp"
            android:paddingRight="10sp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/detetiveNome2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/detetiveTelefone2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/detetiveEdereco2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/detetiveEmail2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/detetiveTexto2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp" />
        </GridLayout>

    </GridLayout>

</LinearLayout>